# sample-codex

./: .gitignore  Dockerfile  ELECTRON_INTEGRATION.md  RUN_INSTRUCTIONS.md  STARTUP.md  nixpacks.toml  package-lock.json  package.json  pyproject.toml  readme.md  start.py  start.sh  start_demo.sh  test_build.sh  todo.md
backend/: .env.example  LINTING.md  lint.sh  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py  database.py  db_connection.py  main.py  system_metadata.py  system_tags.py
backend/app/demo/: __init__.py  database.py  generator.py  middleware.py  scanner.py
backend/app/migrations/: 001_add_is_system_to_tags.py  002_insert_system_tags.py  003_add_alias_to_collection_items.py  __init__.py  runner.py
backend/app/routers/: collections.py  database.py  folders.py  samples.py  search.py  tags.py
backend/app/services/: reconciler.py  scanner.py
frontend/: .prettierignore  MIGRATION_PROGRESS.md  TYPESCRIPT_MIGRATION_PLAN.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/demo-dist/: index.html
frontend/demo-dist/assets/: index-B4R9gVj8.css  index-BANwGJtj.js  index-BQ5TlEkF.js  index-BlVrZUG6.js  index-BvugA0O3.css  index-D5t5Uc5b.js  index-HMlAJNuW.css  index-YiUgbGGw.css  index-iB9iGUIm.js  index-lWLExzYw.js  index-r4rNGT6o.css
frontend/src/: App.jsx  App.tsx  index.css
frontend/src/components/: Banner.tsx  DatabaseSetupModal.tsx  DemoBanner.tsx  DuplicateLocationsModal.tsx  FilterPane.example.jsx  FilterPane.jsx  FilterPane.md  FilterPane.test.tsx  FilterPane.tsx  FolderBrowserModal.jsx  FolderBrowserModal.test.tsx  FolderBrowserModal.tsx  FolderTreePane.jsx  FolderTreePane.md  FolderTreePane.test.tsx  FolderTreePane.tsx  KeyboardShortcutsModal.tsx  MobileNotSupported.tsx  OrphanedFilesModal.tsx  SettingsModal.jsx  SettingsModal.test.tsx  SettingsModal.tsx  Sidebar.jsx  Sidebar.test.tsx  Sidebar.tsx
frontend/src/contexts/: AudioPlayerContext.tsx  ThemeContext.jsx  ThemeContext.tsx
frontend/src/hooks/: useAudioPlayback.js  useAudioPlayback.ts  useScanProgress.jsx  useScanProgress.tsx
frontend/src/pages/: Browser.jsx  Browser.tsx  Collections.jsx  Collections.tsx  Dashboard.jsx  Dashboard.tsx  Search.jsx  Search.tsx  Startup.jsx  Startup.tsx  Tags.jsx  Tags.tsx
frontend/src/services/: api.js  api.ts
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
frontend/src/utils/: audioCache.js  audioCache.test.ts  audioCache.ts  audioContext.js  (+3 more)
(+25 files in other folders)
